Fix: adjust car card dimensions and layout for better alignment

--- a/frontend/src/assets/css/car.css
+++ b/frontend/src/assets/css/car.css
@@ -85,10 +85,14 @@ div.car-container article {
 
 div.car-container article div.car {
   padding: 10px;
-  width: 340px;
+  width: 290px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  position: relative;
+  top: 0;
+  overflow: hidden;
 }
 
 div.car-container article div.car .car-img {
@@ -183,7 +187,8 @@ div.car-container article div.car .car-footer div.co2 img {
 }
 
 div.car-container article div.car-info {
-  width: 100%;
+  /* width: 100%; */
+  width: 510px;
 }
 
 div.car-container article div.car-info div.car-info-header {
@@ -348,6 +353,7 @@ div.car-container article div.action {
 
   div.car-container article {
     flex-direction: column;
+    align-items: flex-start;
     width: calc(100% - 20px);
   }
 
@@ -357,5 +363,9 @@ div.car-container article div.action {
 
   div.car-container article div.car .car-footer {
     margin-bottom: 20px;
+  }
+
+  section.car-list article div.car-info {
+    width: 100%;
   }
 }
